<resources>
    <string name="app_name">Pager</string>
    <string name="hello">Hello</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login_to_continue">Please Login To Continue</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_up_to_continue">Sign Up To Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="user_name">User Name</string>
    <string name="re_type_password">Confirm Password</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_change_image">Add / Change Image</string>
    <string name="data_added">Data Added</string>
    <string name="enter_reset_mail">Enter reset mail</string>
    <string name="get_mail">Get Mail</string>
    <string name="search">Search</string>
    <string name="search_new_connection">Add new connection</string>
    <string name="your_profile">Your Profile</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

</resources>