<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activities.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/signNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/please_sign_in"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/add_change_image"
            android:textColor="@color/accentColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImage" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:autofillHints="auto"
            android:background="@drawable/mail_password_bg"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImage"
            app:layout_constraintVertical_bias="0.026" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:autofillHints="auto"
            android:background="@drawable/mail_password_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:autofillHints="auto"
            android:background="@drawable/mail_password_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/retypePassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:autofillHints="auto"
            android:background="@drawable/mail_password_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/image_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signNote"
            app:layout_constraintVertical_bias="0.065"
            app:riv_oval="true" />

        <android.widget.Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/login_button_bg"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retypePassword"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retypePassword"
            app:layout_constraintVertical_bias="0.913" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>